DBH2 Se agregan todos las tables y campos mapeados a los dto

--- a/pyt-contabilidad/ea-gdb/names-sql.properties
+++ b/pyt-contabilidad/ea-gdb/names-sql.properties
@@ -112,3 +112,155 @@ com.pyt.service.dto.DetalleDTO.valorConsumo=nconsumptionvalue
 com.pyt.service.dto.DetalleDTO.valorDescuento=ndiscountvalue
 com.pyt.service.dto.DetalleDTO.valorIva=nivavalue
 com.pyt.service.dto.DetalleDTO.valorNeto=nnetworth
+com.pyt.service.dto.DocumentoDTO=TBL_DOCUMENT
+com.pyt.service.dto.DocumentoDTO.banco=sbank
+com.pyt.service.dto.DocumentoDTO.descripcion=sdescription
+com.pyt.service.dto.DocumentoDTO.estado=sstate
+com.pyt.service.dto.DocumentoDTO.fechaAnulacion=dannulement
+com.pyt.service.dto.DocumentoDTO.fechaNota=dnote
+com.pyt.service.dto.DocumentoDTO.fechaRegistro=dregister
+com.pyt.service.dto.DocumentoDTO.moneda=smoney
+com.pyt.service.dto.DocumentoDTO.numeroNota=snumbernote
+com.pyt.service.dto.DocumentoDTO.tercero=senterprise
+com.pyt.service.dto.DocumentoDTO.tipoDocumento=sdocumenttype
+com.pyt.service.dto.DocumentoDTO.valor=svalue
+com.pyt.service.dto.DocumentosDTO=TBL_DOCUMENTS
+com.pyt.service.dto.DocumentosDTO.claseControlar=scontrollerclass
+com.pyt.service.dto.DocumentosDTO.doctype=sdoctype
+com.pyt.service.dto.DocumentosDTO.edit=nedit
+com.pyt.service.dto.DocumentosDTO.fieldLabel=sfieldlabel
+com.pyt.service.dto.DocumentosDTO.fieldName=sfieldname
+com.pyt.service.dto.DocumentosDTO.nullable=nnullable
+com.pyt.service.dto.DocumentosDTO.objectSearchDto=sobjectseachdto
+com.pyt.service.dto.DocumentosDTO.putFieldName=sputfieldname
+com.pyt.service.dto.DocumentosDTO.putNameAssign=sputnameassign
+com.pyt.service.dto.DocumentosDTO.putNameShow=sputnameshow
+com.pyt.service.dto.DocumentosDTO.selectMameGroup=sselectnamegroup
+com.pyt.service.dto.EmpresaDTO=TBL_ENTERPRISE
+com.pyt.service.dto.EmpresaDTO.correoElectronico=semail
+com.pyt.service.dto.EmpresaDTO.digitoVerificacion=ndigitvalid
+com.pyt.service.dto.EmpresaDTO.direccion=saddress
+com.pyt.service.dto.EmpresaDTO.monedaDefecto=smoneydefect
+com.pyt.service.dto.EmpresaDTO.nit=snit
+com.pyt.service.dto.EmpresaDTO.nombre=sname
+com.pyt.service.dto.EmpresaDTO.nombreContador=scounter
+com.pyt.service.dto.EmpresaDTO.nombreRepresentante=srepresentative
+com.pyt.service.dto.EmpresaDTO.pais=scountry
+com.pyt.service.dto.EmpresaDTO.telefono=sphone
+com.pyt.service.dto.FacturaDTO=TBL_BILL
+com.pyt.service.dto.FacturaDTO.detalle=sdetail
+com.pyt.service.dto.FacturaDTO.fechaFactura=dbill
+com.pyt.service.dto.FacturaDTO.fechaRegistro=dregister
+com.pyt.service.dto.FacturaDTO.fechaVencimiento=dexpiration
+com.pyt.service.dto.FacturaDTO.moneda=smoney
+com.pyt.service.dto.FacturaDTO.observacion=sobservation
+com.pyt.service.dto.FacturaDTO.tercero=senterprise
+com.pyt.service.dto.IngresoDTO=TBL_ENTRY
+com.pyt.service.dto.IngresoDTO.conductorEntrada=sdriverin
+com.pyt.service.dto.IngresoDTO.conductorSalida=sdriverout
+com.pyt.service.dto.IngresoDTO.descripcion=sdescription
+com.pyt.service.dto.IngresoDTO.documentoConductorEntrada=
+com.pyt.service.dto.IngresoDTO.documentoConductorSalida=
+com.pyt.service.dto.IngresoDTO.empresa=senterprise
+com.pyt.service.dto.IngresoDTO.fechaEntrada=sin
+com.pyt.service.dto.IngresoDTO.fechaSalida=dout
+com.pyt.service.dto.IngresoDTO.placaVehiculo=splate
+com.pyt.service.dto.IngresoDTO.propietario=sowner
+com.pyt.service.dto.IngresoDTO.telegonoContacto=sphonecontact
+com.pyt.service.dto.IngresoDTO.tiempoEstimado=nstimatedtime
+com.pyt.service.dto.IngresoDTO.tiempoTrabajo=nworktime
+com.pyt.service.dto.IngresoDTO.trabajador=sworker
+com.pyt.service.dto.MarcadorDTO=TBL_MARKER
+com.pyt.service.dto.MarcadorDTO.configuracion=sconfiguration
+com.pyt.service.dto.MarcadorDTO.marcador=smarker
+com.pyt.service.dto.MarcadorDTO.orden=norder
+com.pyt.service.dto.MarcadorDTO.tipoInOut=siotype
+com.pyt.service.dto.MarcadorServicioDTO=TBL_MARKER_SERVICE
+com.pyt.service.dto.MarcadorServicioDTO.configuracion=sconfiguration
+com.pyt.service.dto.MarcadorServicioDTO.marcador=smarker
+com.pyt.service.dto.MarcadorServicioDTO.nombreCampo=snamefield
+com.pyt.service.dto.MarcadorServicioDTO.servicio=sservice
+com.pyt.service.dto.OficinaDTO=TBL_OFFICE
+com.pyt.service.dto.OficinaDTO.ciudad=scity
+com.pyt.service.dto.OficinaDTO.detalle=sdetail
+com.pyt.service.dto.OficinaDTO.direccion=saddress
+com.pyt.service.dto.OficinaDTO.nombre=sname
+com.pyt.service.dto.PaisDTO=TBL_COUNTRY
+com.pyt.service.dto.PaisDTO.estado=sstate
+com.pyt.service.dto.PaisDTO.nombre=sname
+com.pyt.service.dto.ParametroGrupoDTO=TBL_PARAMETER_GROUP
+com.pyt.service.dto.ParametroGrupoDTO.grupo=sgroup
+com.pyt.service.dto.ParametroGrupoDTO.parametro=sparameter
+com.pyt.service.dto.PersonaDTO=TBL_PERSON
+com.pyt.service.dto.PersonaDTO.apellido=slastname
+com.pyt.service.dto.PersonaDTO.direccion=saddress
+com.pyt.service.dto.PersonaDTO.documento=sdocument
+com.pyt.service.dto.PersonaDTO.email=semail
+com.pyt.service.dto.PersonaDTO.fechaNacimiento=dbirthday
+com.pyt.service.dto.PersonaDTO.nombre=sname
+com.pyt.service.dto.PersonaDTO.numeroTarjetaProfesional=sprofessionalcard
+com.pyt.service.dto.PersonaDTO.profesion=sprofession
+com.pyt.service.dto.PersonaDTO.telefono=sphone
+com.pyt.service.dto.PersonaDTO.tipoDocumento=sdopcumenttype
+com.pyt.service.dto.RepuestosDTO=TBL_REPLACEMENT
+com.pyt.service.dto.RepuestosDTO.nombre=sname
+com.pyt.service.dto.RepuestosDTO.porcentajeIva=nivapercent
+com.pyt.service.dto.RepuestosDTO.referencia=sreference
+com.pyt.service.dto.RepuestosDTO.valorMercado=nvaluemarket
+com.pyt.service.dto.RepuestosDTO.valorVenta=nvaluesale
+com.pyt.service.dto.ServicioCampoBusquedaDTO=TBL_FIELD_SERVICE_SEARCH
+com.pyt.service.dto.ServicioCampoBusquedaDTO.campo=sfield
+com.pyt.service.dto.ServicioCampoBusquedaDTO.columna=ncolumn
+com.pyt.service.dto.ServicioCampoBusquedaDTO.configuracion=sconfiguration
+com.pyt.service.dto.ServicioCampoBusquedaDTO.marcador=smarker
+com.pyt.service.dto.ServicioCampoBusquedaDTO.servicio=sservice
+com.pyt.service.dto.ServicioDTO=TBL_SERVICE
+com.pyt.service.dto.ServicioDTO.descripcion=sdescription
+com.pyt.service.dto.ServicioDTO.nombre=sname
+com.pyt.service.dto.ServicioDTO.valorManoObra=nvaluehandwork 
+com.pyt.service.dto.TrabajadorDTO=TBL_EMPLOYEE
+com.pyt.service.dto.TrabajadorDTO.centroCosto=scentercost
+com.pyt.service.dto.TrabajadorDTO.correo=semail
+com.pyt.service.dto.TrabajadorDTO.estado=sstate
+com.pyt.service.dto.TrabajadorDTO.fechaIngreso=dentry
+com.pyt.service.dto.TrabajadorDTO.fechaRetiro=dretirement
+com.pyt.service.dto.TrabajadorDTO.persona=sperson
+com.pyt.service.dto.TrabajadorDTO.tipoPago=spaytype
+com.pyt.service.dto.inventario.AlmacenDto=TBL_STORE
+com.pyt.service.dto.inventario.AlmacenDto.descripcion=sdescription
+com.pyt.service.dto.inventario.AlmacenDto.direccion=saddress
+com.pyt.service.dto.inventario.AlmacenDto.nombre=sname
+com.pyt.service.dto.inventario.MovimientoDto=TBL_MOVEMENT
+com.pyt.service.dto.inventario.MovimientoDto.cantidad=nquantity
+com.pyt.service.dto.inventario.MovimientoDto.precioCompra=npurcharseprice
+com.pyt.service.dto.inventario.MovimientoDto.producto=sproduct
+com.pyt.service.dto.inventario.MovimientoDto.tipo=stype
+com.pyt.service.dto.inventario.MovimientoDto.valor=nvalue
+com.pyt.service.dto.inventario.ParametroGrupoInvendatioDTO=TBL_PARAMETER_GROUP_INVENTORY
+com.pyt.service.dto.inventario.ParametroInvendatioDTO=TBL_PARAMETER_GROUP
+com.pyt.service.dto.inventario.ProductoDto=TBL_PRODUCT
+com.pyt.service.dto.inventario.ProductoDto.descripcion=sdescription
+com.pyt.service.dto.inventario.ProductoDto.nombre=sname
+com.pyt.service.dto.inventario.ProductoDto.referencia=sreference
+com.pyt.service.dto.inventario.ProductoUbicacionDto=TBL_PRODUCT_LOCATION
+com.pyt.service.dto.inventario.ProductoUbicacionDto.cantidad=nquantity
+com.pyt.service.dto.inventario.ProductoUbicacionDto.producto=sproduct
+com.pyt.service.dto.inventario.ProductoUbicacionDto.ubicacionAlmacen=slocation
+com.pyt.service.dto.inventario.RestarCantidadDto=TBL_REMAIN_QUANTITY
+com.pyt.service.dto.inventario.RestarCantidadDto.cantidad=nquantity
+com.pyt.service.dto.inventario.RestarCantidadDto.movimiento=smovement
+com.pyt.service.dto.inventario.ResumenProductoDto=TBL_PRODUCT_SUMMARY
+com.pyt.service.dto.inventario.ResumenProductoDto.cantidad=nquantity
+com.pyt.service.dto.inventario.ResumenProductoDto.gananciaPercentVenta=nprofitpercentsale
+com.pyt.service.dto.inventario.ResumenProductoDto.ivaPercentAplicarVenta=sivapercentsaleapply
+com.pyt.service.dto.inventario.ResumenProductoDto.producto=sproduct
+com.pyt.service.dto.inventario.ResumenProductoDto.valorCompra=npurcharsevalue
+com.pyt.service.dto.inventario.ResumenProductoDto.valorVenta=nsalevalue
+com.pyt.service.dto.inventario.SaldoDto=TBL_BALANCE
+com.pyt.service.dto.inventario.SaldoDto.cantidad=nquantity
+com.pyt.service.dto.inventario.SaldoDto.movimiento=smovement
+com.pyt.service.dto.inventario.SaldoDto.total=ntotal
+com.pyt.service.dto.inventario.UbicacionDto=TBL_LOCATION
+com.pyt.service.dto.inventario.UbicacionDto.almacen=sstore
+com.pyt.service.dto.inventario.UbicacionDto.descripcion=sdescription
+com.pyt.service.dto.inventario.UbicacionDto.nombre=sname
