--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -1,10 +1,10 @@
-org.pyt.common.abstracts.ADTO.codigo=SCODE
-org.pyt.common.abstracts.ADTO.fechaCreacion=dcreate
-org.pyt.common.abstracts.ADTO.fechaActualizacion=dupdate
-org.pyt.common.abstracts.ADTO.fechaEliminacion=ddelete
-org.pyt.common.abstracts.ADTO.creador=screater
-org.pyt.common.abstracts.ADTO.actualizador=supdater
-org.pyt.common.abstracts.ADTO.eliminador=sdeleter
+org.pyt.common.abstracts.ADto.codigo=SCODE
+org.pyt.common.abstracts.ADto.fechaCreacion=dcreate
+org.pyt.common.abstracts.ADto.fechaActualizacion=dupdate
+org.pyt.common.abstracts.ADto.fechaEliminacion=ddelete
+org.pyt.common.abstracts.ADto.creador=screater
+org.pyt.common.abstracts.ADto.actualizador=supdater
+org.pyt.common.abstracts.ADto.eliminador=sdeleter
 com.pyt.service.dto.ParametroDTO=TBL_PARAMETER
 com.pyt.service.dto.ParametroDTO.nombre=sname
 com.pyt.service.dto.ParametroDTO.descripcion=sdescription
@@ -131,11 +131,11 @@ com.pyt.service.dto.DocumentosDTO.edit=nedit
 com.pyt.service.dto.DocumentosDTO.fieldLabel=sfieldlabel
 com.pyt.service.dto.DocumentosDTO.fieldName=sfieldname
 com.pyt.service.dto.DocumentosDTO.nullable=nnullable
-com.pyt.service.dto.DocumentosDTO.objectSearchDTO=sobjectseachDTO
+com.pyt.service.dto.DocumentosDTO.objectSearchDto=sobjectsearchDTO
 com.pyt.service.dto.DocumentosDTO.putFieldName=sputfieldname
 com.pyt.service.dto.DocumentosDTO.putNameAssign=sputnameassign
 com.pyt.service.dto.DocumentosDTO.putNameShow=sputnameshow
-com.pyt.service.dto.DocumentosDTO.selectMameGroup=sselectnamegroup
+com.pyt.service.dto.DocumentosDTO.selectNameGroup=sselectnamegroup
 com.pyt.service.dto.EmpresaDTO=TBL_ENTERPRISE
 com.pyt.service.dto.EmpresaDTO.correoElectronico=semail
 com.pyt.service.dto.EmpresaDTO.digitoVerificacion=ndigitvalid
@@ -143,8 +143,8 @@ com.pyt.service.dto.EmpresaDTO.direccion=saddress
 com.pyt.service.dto.EmpresaDTO.monedaDefecto=smoneydefect
 com.pyt.service.dto.EmpresaDTO.nit=snit
 com.pyt.service.dto.EmpresaDTO.nombre=sname
-com.pyt.service.dto.EmpresaDTO.nombreContador=scounter
-com.pyt.service.dto.EmpresaDTO.nombreRepresentante=srepresentative
+com.pyt.service.dto.EmpresaDTO.contador=scounter
+com.pyt.service.dto.EmpresaDTO.representante=srepresentative
 com.pyt.service.dto.EmpresaDTO.pais=scountry
 com.pyt.service.dto.EmpresaDTO.telefono=sphone
 com.pyt.service.dto.FacturaDTO=TBL_BILL
