DBH2 Se realiza ajsutes de tareas para su correcto funcionamienot

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -32,7 +32,7 @@ com.pyt.service.dto.AsociacionArchivoDTO=TBL_ASSOCIATION_ARCHIVE
 com.pyt.service.dto.AsociacionArchivoDTO.archivo=sfile
 com.pyt.service.dto.AsociacionArchivoDTO.nombre=sname
 com.pyt.service.dto.CentroCostoDTO=TBL_CENTER_COST
-com.pyt.service.dto.CentroCostoDTO.descripcion=sdescriiption
+com.pyt.service.dto.CentroCostoDTO.descripcion=sdescription
 com.pyt.service.dto.CentroCostoDTO.empresa=senterprise
 com.pyt.service.dto.CentroCostoDTO.estado=sstate
 com.pyt.service.dto.CentroCostoDTO.nombre=sname
@@ -91,7 +91,7 @@ com.pyt.service.dto.DetalleContableDTO.observacion=sobservation
 com.pyt.service.dto.DetalleContableDTO.renglon=nrow
 com.pyt.service.dto.DetalleContableDTO.valor=nvalue
 com.pyt.service.dto.DetalleDTO=TBL_DETAIL
-com.pyt.service.dto.DetalleDTO.actividadIca=sicaacitvity
+com.pyt.service.dto.DetalleDTO.actividadIca=sicaactivity
 com.pyt.service.dto.DetalleDTO.categoriaGasto=sspendingcategory
 com.pyt.service.dto.DetalleDTO.centroCosto=scostcenter
 com.pyt.service.dto.DetalleDTO.codigoDocumento=scodedocument
@@ -159,17 +159,21 @@ com.pyt.service.dto.IngresoDTO=TBL_ENTRY
 com.pyt.service.dto.IngresoDTO.conductorEntrada=sdriverin
 com.pyt.service.dto.IngresoDTO.conductorSalida=sdriverout
 com.pyt.service.dto.IngresoDTO.descripcion=sdescription
-com.pyt.service.dto.IngresoDTO.documentoConductorEntrada=
-com.pyt.service.dto.IngresoDTO.documentoConductorSalida=
 com.pyt.service.dto.IngresoDTO.empresa=senterprise
-com.pyt.service.dto.IngresoDTO.fechaEntrada=sin
+com.pyt.service.dto.IngresoDTO.fechaEntrada=din
 com.pyt.service.dto.IngresoDTO.fechaSalida=dout
 com.pyt.service.dto.IngresoDTO.placaVehiculo=splate
 com.pyt.service.dto.IngresoDTO.propietario=sowner
-com.pyt.service.dto.IngresoDTO.telegonoContacto=sphonecontact
+com.pyt.service.dto.IngresoDTO.telefonoContacto=sphonecontact
 com.pyt.service.dto.IngresoDTO.tiempoEstimado=nstimatedtime
-com.pyt.service.dto.IngresoDTO.tiempoTrabajo=nworktime
+com.pyt.service.dto.IngresoDTO.tiempoTrabajado=nworktime
 com.pyt.service.dto.IngresoDTO.trabajador=sworker
+com.pyt.service.dto.IngresoServicioDTO=TBL_ENTRY_SERVICE
+com.pyt.service.dto.IngresoServicioDTO.ingreso=sentry
+com.pyt.service.dto.IngresoServicioDTO.servicio=sservice
+com.pyt.service.dto.IngresoRepuestoDTO=TBL_ETNTRY_REPLACEMENT
+com.pyt.service.dto.IngresoRepuestoDTO.ingreso=sentry
+com.pyt.service.dto.IngresoRepuestoDTO.repuesto=sreplacement
 com.pyt.service.dto.MarcadorDTO=TBL_MARKER
 com.pyt.service.dto.MarcadorDTO.configuracion=sconfiguration
 com.pyt.service.dto.MarcadorDTO.marcador=smarker
