DBH2 Se realiza ajuste de tareas de personas, splash,trbajadres

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -26,7 +26,7 @@ com.pyt.service.dto.ActividadIcaDTO=TBL_ICA_ACTIVITY
 com.pyt.service.dto.ActividadIcaDTO.base=sbase
 com.pyt.service.dto.ActividadIcaDTO.codigoIca=sicacode
 com.pyt.service.dto.ActividadIcaDTO.descripcion=sdescription
-com.pyt.service.dto.ActividadIcaDTO.nombe=sname
+com.pyt.service.dto.ActividadIcaDTO.nombre=sname
 com.pyt.service.dto.ActividadIcaDTO.tarifa=srate
 com.pyt.service.dto.AsociacionArchivoDTO=TBL_ASSOCIATION_ARCHIVE
 com.pyt.service.dto.AsociacionArchivoDTO.archivo=sfile
@@ -245,7 +245,7 @@ com.pyt.service.dto.inventario.ParametroInventarioDTO=TBL_PARAMETER_GROUP
 com.pyt.service.dto.inventario.ProductoDTO=TBL_PRODUCT
 com.pyt.service.dto.inventario.ProductoDTO.descripcion=sdescription
 com.pyt.service.dto.inventario.ProductoDTO.nombre=sname
-com.pyt.service.dto.inventario.ProductoDTO.referencia=sreference
+com.pyt.service.dto.inventario.ProductoDTO.referencia=sreferences
 com.pyt.service.dto.inventario.ProductoUbicacionDTO=TBL_PRODUCT_LOCATION
 com.pyt.service.dto.inventario.ProductoUbicacionDTO.cantidad=nquantity
 com.pyt.service.dto.inventario.ProductoUbicacionDTO.producto=sproduct
