--- a/ea-sql/pom.xml
+++ b/ea-sql/pom.xml
@@ -11,4 +11,16 @@
 	<artifactId>ea-sql</artifactId>
 	<version>${project.version}</version>
 	<description>Projecto creado solo para contener las consultas sql que usara la aplicacion ytener todas los script versionados</description>
+	<dependencies>
+		<dependency>
+			<groupId>co.com.japl.ea</groupId>
+			<artifactId>ea-constantes</artifactId>
+			<version>1.2.1-BETA</version>
+		</dependency>
+		<dependency>
+			<groupId>co.com.pyt</groupId>
+			<artifactId>pyt-common</artifactId>
+			<version>1.2.1-BETA</version>
+		</dependency>
+	</dependencies>
 </project>
