DBH2 See realizan ajustes para los repuestos en los ingresos y ajsutes para los registros ingresados

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -241,7 +241,16 @@ com.pyt.service.dto.inventario.MovimientoDTO.producto=sproduct
 com.pyt.service.dto.inventario.MovimientoDTO.tipo=stype
 com.pyt.service.dto.inventario.MovimientoDTO.valor=nvalue
 com.pyt.service.dto.inventario.ParametroGrupoInventarioDTO=TBL_PARAMETER_GROUP_INVENTORY
-com.pyt.service.dto.inventario.ParametroInventarioDTO=TBL_PARAMETER_GROUP
+com.pyt.service.dto.inventario.ParametroGrupoInventarioDTO.grupo=sgroup
+com.pyt.service.dto.inventario.ParametroGrupoInventarioDTO.parametro=sparameter
+com.pyt.service.dto.inventario.ParametroInventarioDTO=TBL_INVENTORY_PARAMETER
+com.pyt.service.dto.inventario.ParametroInventarioDTO.nombre=sname
+com.pyt.service.dto.inventario.ParametroInventarioDTO.descripcion=sdescription
+com.pyt.service.dto.inventario.ParametroInventarioDTO.valor=svalue
+com.pyt.service.dto.inventario.ParametroInventarioDTO.valor2=svalue2
+com.pyt.service.dto.inventario.ParametroInventarioDTO.grupo=sgroup
+com.pyt.service.dto.inventario.ParametroInventarioDTO.estado=bstate
+com.pyt.service.dto.inventario.ParametroInventarioDTO.orden=norder
 com.pyt.service.dto.inventario.ProductoDTO=TBL_PRODUCT
 com.pyt.service.dto.inventario.ProductoDTO.descripcion=sdescription
 com.pyt.service.dto.inventario.ProductoDTO.nombre=sname
