DBH2 Se agrega codigo para agregar la opcion de escoger si el campo agregado se va amostrar en las columnas de las tablas de listas y tambien si ese mismo campo se muestra en los filtros para esas tablas.

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -136,6 +136,8 @@ com.pyt.service.dto.DocumentosDTO.putFieldName=sputfieldname
 com.pyt.service.dto.DocumentosDTO.putNameAssign=sputnameassign
 com.pyt.service.dto.DocumentosDTO.putNameShow=sputnameshow
 com.pyt.service.dto.DocumentosDTO.selectNameGroup=sselectnamegroup
+com.pyt.service.dto.DocumentosDTO.fieldFilter=sfieldfilter
+com.pyt.service.dto.DocumentosDTO.fieldColumn=sfieldcolumn
 com.pyt.service.dto.EmpresaDTO=TBL_ENTERPRISE
 com.pyt.service.dto.EmpresaDTO.correoElectronico=semail
 com.pyt.service.dto.EmpresaDTO.digitoVerificacion=ndigitvalid
