dbh2 Se realiza ajuste para generalizar los filtros y poder usarlos en otros bean, se realiza reorganizacion de codigo sacandolo de common y pasandolo a app ya que es de capa de presentacion, ademas se realiza ajuste sobre arquitectura para cambiar el nombre de un import.

--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -36,6 +36,11 @@
 			<version>${project.version}</version>
 			<!-- <scope>${project.scope}</scope> -->
 		</dependency>
+				<dependency>
+			<groupId>co.com.arquitectura.anotaciones</groupId>
+			<artifactId>arquitetura-anotaciones</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>co.com.pyt</groupId>
 			<artifactId>pyt-common</artifactId>
