DBH2 Se creacion de nuevos dtos y tablas, para manejo de usuarios, grupos, permisos, ayuda y campos genericos para filtros y tablas.

--- a/pyt-contabilidad/pyt-query/pom.xml
+++ b/pyt-contabilidad/pyt-query/pom.xml
@@ -23,5 +23,11 @@
 			<artifactId>ea-exceptions</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>co.com.japl.ea</groupId>
+			<artifactId>ea-dto</artifactId>
+			<version>${project.version}</version>
+			<scope>${project.scope}</scope>
+		</dependency>
 	</dependencies>
 </project>
