--- a/ea-file-bin/pom.xml
+++ b/ea-file-bin/pom.xml
@@ -14,12 +14,17 @@
   	<dependency>
   		<groupId>co.com.pyt</groupId>
   		<artifactId>pyt-query</artifactId>
-  		<version>1.2.1-BETA</version>
+  		 <version>${project.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>co.com.pyt</groupId>
   		<artifactId>pyt-common</artifactId>
-  		<version>1.2.1-BETA</version>
+  		 <version>${project.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>co.com.japl.ea</groupId>
+  		<artifactId>ea-dto</artifactId>
+  		 <version>${project.version}</version>
   	</dependency>
   </dependencies>
 </project>
