DBH2 Se realiza ajuste para usar un bean y que sea usado por varios link y se realiza acciones dependiendo de los parametros configurados  el final del link para agregar parametros es ?nombre$valor&nombre%valor Inicia parametros con ? separamedor de parametros & separador de nombre de parametro y valor con $

--- a/pyt-contabilidad/pyt-app/properties/menu.properties
+++ b/pyt-contabilidad/pyt-app/properties/menu.properties
@@ -13,4 +13,6 @@ General/Administrador/DocumentoDinamico=org.pyt.app.beans.dinamico.FormularioBea
 General/Administrador/ListConfigMarkServ=org.pyt.app.beans.config.ListConfigBean
 Acciones/Inventario/Productos=org.pyt.app.beans.repuesto.RepuestoBean
 Acciones/Vehiculos/Ingresos=org.pyt.app.beans.GuiaIngresos.ListIngresosBean
-Acciones/Documentos=org.pyt.app.beans.dinamico.ListaDocumentosBean
+Acciones/Documentos/Factura?tipoDocumento$factura=org.pyt.app.beans.dinamico.ListaDocumentosBean
+Acciones/Documentos/DocumentoXPagar?tipoDocumento$docxpagar=org.pyt.app.beans.dinamico.ListaDocumentosBean
+Acciones/Documentos/DocumentoXCobrar?tipoDocumento$docxcobrar=org.pyt.app.beans.dinamico.ListaDocumentosBean
