DBH2 Se realiza ajsute de codigo para agregar campos para filtros de los campos seleciconados como fitrlso y se ajsutan problemas en la creacion de las tablas que se presentaban en la inicializacion de la aplicacion.

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -136,8 +136,8 @@ com.pyt.service.dto.DocumentosDTO.putFieldName=sputfieldname
 com.pyt.service.dto.DocumentosDTO.putNameAssign=sputnameassign
 com.pyt.service.dto.DocumentosDTO.putNameShow=sputnameshow
 com.pyt.service.dto.DocumentosDTO.selectNameGroup=sselectnamegroup
-com.pyt.service.dto.DocumentosDTO.fieldFilter=sfieldfilter
-com.pyt.service.dto.DocumentosDTO.fieldColumn=sfieldcolumn
+com.pyt.service.dto.DocumentosDTO.fieldFilter=nfieldfilter
+com.pyt.service.dto.DocumentosDTO.fieldColumn=nfieldcolumn
 com.pyt.service.dto.EmpresaDTO=TBL_ENTERPRISE
 com.pyt.service.dto.EmpresaDTO.correoElectronico=semail
 com.pyt.service.dto.EmpresaDTO.digitoVerificacion=ndigitvalid
@@ -279,3 +279,60 @@ com.pyt.service.dto.inventario.UbicacionDTO=TBL_LOCATION
 com.pyt.service.dto.inventario.UbicacionDTO.almacen=sstore
 com.pyt.service.dto.inventario.UbicacionDTO.descripcion=sdescription
 com.pyt.service.dto.inventario.UbicacionDTO.nombre=sname
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO=TBL_CONFIG_GENERIC_FIELD
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.alias=salias
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.classPath=sclasspath
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.description=sdescription
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isColumn=bcolumn
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isFilter=bfield
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isRequired=brequired
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.name=sname
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.state=nstate
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.width=nwidth
+co.com.japl.ea.dto.system.GroupUsersDTO=TBL_GROUP_USERS
+co.com.japl.ea.dto.system.GroupUsersDTO.description=sdescription
+co.com.japl.ea.dto.system.GroupUsersDTO.name=sname
+co.com.japl.ea.dto.system.GroupUsersDTO.state=sstate
+co.com.japl.ea.dto.system.HelpDTO=TBL_HELP
+co.com.japl.ea.dto.system.HelpDTO.body=sbody
+co.com.japl.ea.dto.system.HelpDTO.classPathBean=sclasspathbean
+co.com.japl.ea.dto.system.HelpDTO.css=scss
+co.com.japl.ea.dto.system.HelpDTO.iconCss=siconcss
+co.com.japl.ea.dto.system.HelpDTO.iconPath=siconpath
+co.com.japl.ea.dto.system.HelpDTO.imagePath=simagepath
+co.com.japl.ea.dto.system.HelpDTO.msnBottom=smsnbottom
+co.com.japl.ea.dto.system.HelpDTO.msnRigth=smsnright
+co.com.japl.ea.dto.system.HelpDTO.state=sstate
+co.com.japl.ea.dto.system.HelpDTO.title=stitle
+co.com.japl.ea.dto.system.LanguagesDTO=TBL_LANGUAGES
+co.com.japl.ea.dto.system.LanguagesDTO.code=scodename
+co.com.japl.ea.dto.system.LanguagesDTO.iconPath=siconpath
+co.com.japl.ea.dto.system.LanguagesDTO.iconCss=siconcss
+co.com.japl.ea.dto.system.LanguagesDTO.idiom=sidiom
+co.com.japl.ea.dto.system.LanguagesDTO.state=sstate
+co.com.japl.ea.dto.system.LanguagesDTO.text=stext
+co.com.japl.ea.dto.system.MenuDTO=TBL_MENU
+co.com.japl.ea.dto.system.MenuDTO.classPath=sclasspath
+co.com.japl.ea.dto.system.MenuDTO.iconCss=siconcss
+co.com.japl.ea.dto.system.MenuDTO.iconPath=siconpath
+co.com.japl.ea.dto.system.MenuDTO.state=sstate
+co.com.japl.ea.dto.system.MenuDTO.url=surl
+co.com.japl.ea.dto.system.MenuPermUsersDTO=TBL_MENU_PERM_USER
+co.com.japl.ea.dto.system.MenuPermUsersDTO.groupUsers=sgroupusers
+co.com.japl.ea.dto.system.MenuPermUsersDTO.menu=smenu
+co.com.japl.ea.dto.system.MenuPermUsersDTO.perm=sperm
+co.com.japl.ea.dto.system.MenuPermUsersDTO.state=sstate
+co.com.japl.ea.dto.system.MenuPermUsersDTO.user=suser
+co.com.japl.ea.dto.system.PermissionDTO=TBL_PERMISSION
+co.com.japl.ea.dto.system.PermissionDTO.action=saction
+co.com.japl.ea.dto.system.PermissionDTO.description=sdescription
+co.com.japl.ea.dto.system.PermissionDTO.name=sname
+co.com.japl.ea.dto.system.PermissionDTO.state=sstate
+co.com.japl.ea.dto.system.UsuarioDTO=TBL_USERS
+co.com.japl.ea.dto.system.UsuarioDTO.fechaFin=dend
+co.com.japl.ea.dto.system.UsuarioDTO.fechaIncio=dstart
+co.com.japl.ea.dto.system.UsuarioDTO.grupoUser=sgroupuser
+co.com.japl.ea.dto.system.UsuarioDTO.nombre=sname
+co.com.japl.ea.dto.system.UsuarioDTO.password=spasswrd
+co.com.japl.ea.dto.system.UsuarioDTO.person=sperson
+co.com.japl.ea.dto.system.UsuarioDTO.state=sstate
