DBH2 Se agrega creacion de columnas genericas y se crea pantalla para iniciar la configuracion

--- a/pyt-contabilidad/pyt-app/properties/menu.properties
+++ b/pyt-contabilidad/pyt-app/properties/menu.properties
@@ -11,6 +11,7 @@ General/Configuracion/ServiciosOfertados=org.pyt.app.beans.servicio.ServicioBean
 General/Configuracion/Personas=org.pyt.app.beans.persona.PersonaBean
 General/Administrador/DocumentoDinamico=org.pyt.app.beans.dinamico.FormularioBean
 General/Administrador/ListConfigMarkServ=org.pyt.app.beans.config.ListConfigBean
+General/Administrador/ListGenericInterfaces=org.pyt.app.beans.generic.interfaces.ListGenericInterfacesBean
 Acciones/Inventario/Productos=org.pyt.app.beans.repuesto.RepuestoBean
 Acciones/Vehiculos/Ingresos=org.pyt.app.beans.GuiaIngresos.ListIngresosBean
 Acciones/Documentos/Factura?tipoDocumento$factura=org.pyt.app.beans.dinamico.ListaDocumentosBean
