DBH2 Se relaiza ajuste de la tarea para creacion de la tabla dinamicamente y ajuste en el filtro, ademas de crear la interfaz de edicion de los registro pero no es dinamicamente, se debera realizar que la tarea de edicion tambien se contrauya dinamicamente, y la tabla tambien debe crearse de la nada como el datamodel

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -282,6 +282,7 @@ com.pyt.service.dto.inventario.UbicacionDTO.nombre=sname
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO=TBL_CONFIG_GENERIC_FIELD
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.alias=salias
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.classPath=sclasspath
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.classPathBean=sclasspathbean
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.description=sdescription
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isColumn=bcolumn
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isFilter=bfield
