DBH2 Se relaiza ajuste para manejo de filtros, columnas y campos dinamicos.

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -290,6 +290,7 @@ co.com.japl.ea.dto.system.ConfigGenericFieldDTO.isRequired=brequired
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.name=sname
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.state=nstate
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.width=nwidth
+co.com.japl.ea.dto.system.ConfigGenericFieldDTO.orden=norder
 co.com.japl.ea.dto.system.GroupUsersDTO=TBL_GROUP_USERS
 co.com.japl.ea.dto.system.GroupUsersDTO.description=sdescription
 co.com.japl.ea.dto.system.GroupUsersDTO.name=sname
