DBH2 Se realiza ajueste para que se puedan configruar formularios complemteamente ademas agregando para los campos del formulario.

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -311,7 +311,7 @@ co.com.japl.ea.dto.system.LanguagesDTO.code=scodename
 co.com.japl.ea.dto.system.LanguagesDTO.iconPath=siconpath
 co.com.japl.ea.dto.system.LanguagesDTO.iconCss=siconcss
 co.com.japl.ea.dto.system.LanguagesDTO.idiom=sidiom
-co.com.japl.ea.dto.system.LanguagesDTO.state=sstate
+co.com.japl.ea.dto.system.LanguagesDTO.state=nstate
 co.com.japl.ea.dto.system.LanguagesDTO.text=stext
 co.com.japl.ea.dto.system.MenuDTO=TBL_MENU
 co.com.japl.ea.dto.system.MenuDTO.classPath=sclasspath
