--- a/pyt-contabilidad/pyt-app/properties/menu.properties
+++ b/pyt-contabilidad/pyt-app/properties/menu.properties
@@ -9,6 +9,7 @@ General/Configuracion/Concepto=org.pyt.app.beans.concepto.ConceptoBean
 General/Configuracion/CuentaContable=org.pyt.app.beans.cuentaContable.CuentaContableBean
 General/Configuracion/ServiciosOfertados=org.pyt.app.beans.servicio.ServicioBean
 General/Configuracion/Personas=org.pyt.app.beans.persona.PersonaBean
+General/Configuracion/Languages=org.pyt.app.beans.languages.ListLanguagesBean
 General/Administrador/DocumentoDinamico=org.pyt.app.beans.dinamico.FormularioBean
 General/Administrador/ListConfigMarkServ=org.pyt.app.beans.config.ListConfigBean
 General/Administrador/ListGenericInterfaces=org.pyt.app.beans.generic.interfaces.ListGenericInterfacesBean
