DBH2 se crean los desarrollos para las tareas faltantes de menus,ayudas,grupos,permisos,usuarios.

--- a/pyt-contabilidad/pyt-app/properties/menu.properties
+++ b/pyt-contabilidad/pyt-app/properties/menu.properties
@@ -4,13 +4,15 @@ General/Configuracion/Empresas=org.pyt.app.beans.empresa.EmpresaBean
 General/Configuracion/Trabajadores=org.pyt.app.beans.trabajador.TrabajadorBean
 General/Parametros/Generales=org.pyt.app.beans.parametros.ParametrosBean
 General/Parametros/Inventarios=org.pyt.app.beans.parametroInventario.ParametrosInventariosBean
-General/Configuracion/ActividadIca=org.pyt.app.beans.actividadIca.ActividadIcaBean
-General/Configuracion/Concepto=org.pyt.app.beans.concepto.ConceptoBean
-General/Configuracion/CuentaContable=org.pyt.app.beans.cuentaContable.CuentaContableBean
-General/Configuracion/ServiciosOfertados=org.pyt.app.beans.servicio.ServicioBean
-General/Configuracion/Personas=org.pyt.app.beans.persona.PersonaBean
-General/system/Languages=org.pyt.app.beans.languages.ListLanguagesBean
-General/system/Menus=org.pyt.app.beans.menu.ListMenusBean
+General/Configuration/ActividadIca=org.pyt.app.beans.actividadIca.ActividadIcaBean
+General/Configuration/Concepto=org.pyt.app.beans.concepto.ConceptoBean
+General/Configuration/CuentaContable=org.pyt.app.beans.cuentaContable.CuentaContableBean
+General/Configuration/ServiciosOfertados=org.pyt.app.beans.servicio.ServicioBean
+General/Configuration/Personas=org.pyt.app.beans.persona.PersonaBean
+General/Configuration/system/Languages=org.pyt.app.beans.languages.ListLanguagesBean
+General/Configuration/system/Menus=org.pyt.app.beans.menu.ListMenusBean
+General/Configuration/system/GroupUsers=org.pyt.app.beans.group.users.ListGroupUsersBean
+General/Configuration/system/Permissions=org.pyt.app.beans.permission.ListPermissionBean
 General/Administrador/DocumentoDinamico=org.pyt.app.beans.dinamico.FormularioBean
 General/Administrador/ListConfigMarkServ=org.pyt.app.beans.config.ListConfigBean
 General/Administrador/ListGenericInterfaces=org.pyt.app.beans.generic.interfaces.ListGenericInterfacesBean
