DBH2 Se realiza ajuste para agregar la pantalla de login al inicio de la aplicación.

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -335,6 +335,6 @@ co.com.japl.ea.dto.system.UsuarioDTO.fechaFin=dend
 co.com.japl.ea.dto.system.UsuarioDTO.fechaIncio=dstart
 co.com.japl.ea.dto.system.UsuarioDTO.grupoUser=sgroupuser
 co.com.japl.ea.dto.system.UsuarioDTO.nombre=sname
-co.com.japl.ea.dto.system.UsuarioDTO.password=spasswrd
+co.com.japl.ea.dto.system.UsuarioDTO.password=spassword
 co.com.japl.ea.dto.system.UsuarioDTO.person=sperson
-co.com.japl.ea.dto.system.UsuarioDTO.state=sstate
+co.com.japl.ea.dto.system.UsuarioDTO.state=nstate
