DBH2 Se ajusta login, se  agrega nombre de campos, se agrega sql de insert de languages, se junit a pom.

--- a/pyt-contabilidad/pyt-service/pom.xml
+++ b/pyt-contabilidad/pyt-service/pom.xml
@@ -18,6 +18,13 @@
 			<version>${project.version}</version>
 			<scope>${project.scope}</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+</dependency>
 		<dependency>
 			<groupId>co.com.japl.ea</groupId>
 			<artifactId>ea-loader</artifactId>
