--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -291,7 +291,7 @@ co.com.japl.ea.dto.system.ConfigGenericFieldDTO.name=sname
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.state=nstate
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.width=nwidth
 co.com.japl.ea.dto.system.ConfigGenericFieldDTO.orden=norder
-co.com.japl.ea.dto.system.GroupUsersDTO=TBL_GROUP_USERS
+co.com.japl.ea.dto.system.GroupUsersDTO=TBL_GROUP_USER
 co.com.japl.ea.dto.system.GroupUsersDTO.description=sdescription
 co.com.japl.ea.dto.system.GroupUsersDTO.name=sname
 co.com.japl.ea.dto.system.GroupUsersDTO.state=sstate
@@ -302,9 +302,9 @@ co.com.japl.ea.dto.system.HelpDTO.css=scss
 co.com.japl.ea.dto.system.HelpDTO.iconCss=siconcss
 co.com.japl.ea.dto.system.HelpDTO.iconPath=siconpath
 co.com.japl.ea.dto.system.HelpDTO.imagePath=simagepath
-co.com.japl.ea.dto.system.HelpDTO.msnBottom=smsnbottom
-co.com.japl.ea.dto.system.HelpDTO.msnRigth=smsnright
-co.com.japl.ea.dto.system.HelpDTO.state=sstate
+co.com.japl.ea.dto.system.HelpDTO.msgBottom=smsgbottom
+co.com.japl.ea.dto.system.HelpDTO.msgRigth=smsgright
+co.com.japl.ea.dto.system.HelpDTO.state=nstate
 co.com.japl.ea.dto.system.HelpDTO.title=stitle
 co.com.japl.ea.dto.system.LanguagesDTO=TBL_LANGUAGES
 co.com.japl.ea.dto.system.LanguagesDTO.code=scodename
@@ -316,20 +316,20 @@ co.com.japl.ea.dto.system.LanguagesDTO.text=stext
 co.com.japl.ea.dto.system.MenuDTO=TBL_MENU
 co.com.japl.ea.dto.system.MenuDTO.classPath=sclasspath
 co.com.japl.ea.dto.system.MenuDTO.iconCss=siconcss
-co.com.japl.ea.dto.system.MenuDTO.iconPath=siconpath
-co.com.japl.ea.dto.system.MenuDTO.state=sstate
+co.com.japl.ea.dto.system.MenuDTO.iconPath=siconapth
+co.com.japl.ea.dto.system.MenuDTO.state=nstate
 co.com.japl.ea.dto.system.MenuDTO.url=surl
 co.com.japl.ea.dto.system.MenuPermUsersDTO=TBL_MENU_PERM_USER
 co.com.japl.ea.dto.system.MenuPermUsersDTO.groupUsers=sgroupusers
 co.com.japl.ea.dto.system.MenuPermUsersDTO.menu=smenu
 co.com.japl.ea.dto.system.MenuPermUsersDTO.perm=sperm
-co.com.japl.ea.dto.system.MenuPermUsersDTO.state=sstate
+co.com.japl.ea.dto.system.MenuPermUsersDTO.state=nstate
 co.com.japl.ea.dto.system.MenuPermUsersDTO.user=suser
 co.com.japl.ea.dto.system.PermissionDTO=TBL_PERMISSION
 co.com.japl.ea.dto.system.PermissionDTO.action=saction
 co.com.japl.ea.dto.system.PermissionDTO.description=sdescription
 co.com.japl.ea.dto.system.PermissionDTO.name=sname
-co.com.japl.ea.dto.system.PermissionDTO.state=sstate
+co.com.japl.ea.dto.system.PermissionDTO.state=nstate
 co.com.japl.ea.dto.system.UsuarioDTO=TBL_USERS
 co.com.japl.ea.dto.system.UsuarioDTO.fechaFin=dend
 co.com.japl.ea.dto.system.UsuarioDTO.fechaIncio=dstart
