DBH2 Reorganizacion de paquetes

--- a/pyt-contabilidad/pyt-app/.gitignore
+++ b/pyt-contabilidad/pyt-app/.gitignore
@@ -24,3 +24,7 @@
 /hs_err_pid31562.log
 /hs_err_pid32616.log
 /hs_err_pid7630.log
+/error_load_ea.log
+/VersionRunner.bin
+/output_carguecc.txt
+/output_cargueparametros.csv
