--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -294,7 +294,7 @@ co.com.japl.ea.dto.system.ConfigGenericFieldDTO.orden=norder
 co.com.japl.ea.dto.system.GroupUsersDTO=TBL_GROUP_USER
 co.com.japl.ea.dto.system.GroupUsersDTO.description=sdescription
 co.com.japl.ea.dto.system.GroupUsersDTO.name=sname
-co.com.japl.ea.dto.system.GroupUsersDTO.state=sstate
+co.com.japl.ea.dto.system.GroupUsersDTO.state=nstate
 co.com.japl.ea.dto.system.HelpDTO=TBL_HELP
 co.com.japl.ea.dto.system.HelpDTO.body=sbody
 co.com.japl.ea.dto.system.HelpDTO.classPathBean=sclasspathbean
@@ -338,3 +338,10 @@ co.com.japl.ea.dto.system.UsuarioDTO.nombre=sname
 co.com.japl.ea.dto.system.UsuarioDTO.password=spassword
 co.com.japl.ea.dto.system.UsuarioDTO.person=sperson
 co.com.japl.ea.dto.system.UsuarioDTO.state=nstate
+co.com.japl.ea.dto.system.LoginDTO=TBL_LOGIN
+co.com.japl.ea.dto.system.LoginDTO.fechaInicio=ddateinit
+co.com.japl.ea.dto.system.LoginDTO.fechaFin=ddateend
+co.com.japl.ea.dto.system.LoginDTO.ipMaquina=sipmachine
+co.com.japl.ea.dto.system.LoginDTO.ipPublica=sippublic
+co.com.japl.ea.dto.system.LoginDTO.recordar=nremember
+co.com.japl.ea.dto.system.LoginDTO.usuario=susercode
