DBH3 Se realiza ajuste para el correcto funcionamiento del menu

--- a/pyt-contabilidad/pyt-app/.gitignore
+++ b/pyt-contabilidad/pyt-app/.gitignore
@@ -40,3 +40,8 @@ systemFile
 /output_carguecc.txt
 /output_cargueparametros.csv
 /bin/
+/hs_err_pid11562.log
+/hs_err_pid17374.log
+/hs_err_pid20121.log
+/hs_err_pid21507.log
+/rememberme.bin
