DBH3 Se realiza ajuste del codigo para hacer funcionar los campos dinamicos relacionados con la tabla de parametros, con esto solo queda faltando relacionarlo con busquedas de otros DTOS.

--- a/pyt-contabilidad/pyt-app/.gitignore
+++ b/pyt-contabilidad/pyt-app/.gitignore
@@ -45,3 +45,12 @@ systemFile
 /hs_err_pid20121.log
 /hs_err_pid21507.log
 /rememberme.bin
+/hs_err_pid13851.log
+/hs_err_pid24372.log
+/hs_err_pid25630.log
+/hs_err_pid26163.log
+/hs_err_pid30871.log
+/hs_err_pid31522.log
+/hs_err_pid32243.log
+/hs_err_pid818.log
+/output_cargaparametros.csv
