--- a/pyt-contabilidad/pyt-app/properties/data.properties
+++ b/pyt-contabilidad/pyt-app/properties/data.properties
@@ -1,2 +1,2 @@
 path=./systemFile
-services.list=com.pyt.service.implement.ServicesPackage.List
+services.list=com.pyt.service.implement.inventario.ServicesPackage.List
