--- a/pyt-contabilidad/pyt-app/.gitignore
+++ b/pyt-contabilidad/pyt-app/.gitignore
@@ -40,17 +40,6 @@ systemFile
 /output_carguecc.txt
 /output_cargueparametros.csv
 /bin/
-/hs_err_pid11562.log
-/hs_err_pid17374.log
-/hs_err_pid20121.log
-/hs_err_pid21507.log
 /rememberme.bin
-/hs_err_pid13851.log
-/hs_err_pid24372.log
-/hs_err_pid25630.log
-/hs_err_pid26163.log
-/hs_err_pid30871.log
-/hs_err_pid31522.log
-/hs_err_pid32243.log
-/hs_err_pid818.log
 /output_cargaparametros.csv
+/*log
