DBH3 Se realiza ajustes de mensajes y neuvos campos para documentos dinamicos

--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -138,6 +138,9 @@ com.pyt.service.dto.DocumentosDTO.putNameShow=sputnameshow
 com.pyt.service.dto.DocumentosDTO.selectNameGroup=sselectnamegroup
 com.pyt.service.dto.DocumentosDTO.fieldFilter=nfieldfilter
 com.pyt.service.dto.DocumentosDTO.fieldColumn=nfieldcolumn
+com.pyt.service.dto.DocumentosDTO.fieldIsVisible=nfieldvisible
+com.pyt.service.dto.DocumentosDTO.fieldHasDefaultValue=nfieldhasdefaulvalue
+com.pyt.service.dto.DocumentosDTO.fieldDefaultValue=sfielddefaultvalue
 com.pyt.service.dto.EmpresaDTO=TBL_ENTERPRISE
 com.pyt.service.dto.EmpresaDTO.correoElectronico=semail
 com.pyt.service.dto.EmpresaDTO.digitoVerificacion=ndigitvalid
