--- a/pyt-contabilidad/pyt-app/pom.xml
+++ b/pyt-contabilidad/pyt-app/pom.xml
@@ -112,6 +112,12 @@
 			<artifactId>ea-sql</artifactId>
 			<version>1.2.1-BETA</version>
 		</dependency>
+		<dependency>
+      		<groupId>junit</groupId>
+      		<artifactId>junit</artifactId>
+      		<version>4.12</version>
+      		<scope>test</scope>
+    	</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
