feature - load i18n lack Se agrega nueva pantalla de toggle para activar y desactivar código, falta que funcione correctamente.

--- a/pyt-contabilidad/pyt-app/properties/menu.properties
+++ b/pyt-contabilidad/pyt-app/properties/menu.properties
@@ -7,6 +7,7 @@ General/Administrador/DocumentoDinamico=org.pyt.app.beans.dinamico.FormularioBea
 General/Administrador/ListConfigMarkServ=org.pyt.app.beans.config.ListConfigBean
 General/Administrador/ListGenericInterfaces=org.pyt.app.beans.generic.interfaces.ListGenericInterfacesBean
 General/Administrador/Cache=org.pyt.app.beans.cache.CacheBean
+General/Administrador/Toggle=org.pyt.app.beans.toggle.ToggleBean
 General/Configuration/ActividadIca=org.pyt.app.beans.actividadIca.ActividadIcaBean
 General/Configuration/Bancos=org.pyt.app.beans.banco.BancoBean
 General/Configuration/CentroCosto=org.pyt.app.beans.centroCosto.CentroCostoBean
