--- a/pyt-contabilidad/pyt-app/properties/names-sql.properties
+++ b/pyt-contabilidad/pyt-app/properties/names-sql.properties
@@ -348,3 +348,5 @@ co.com.japl.ea.dto.system.LoginDTO.ipMaquina=sipmachine
 co.com.japl.ea.dto.system.LoginDTO.ipPublica=sippublic
 co.com.japl.ea.dto.system.LoginDTO.recordar=nremember
 co.com.japl.ea.dto.system.LoginDTO.usuario=susercode
+co.com.japl.ea.dto.system.ToggleDTO.nombre=sname
+co.com.japl.ea.dto.system.ToggleDTO.activado=nactived
